Fixed nav bar so that it doesn't shift the content on becoming sticky

--- a/styles/main.css
+++ b/styles/main.css
@@ -84,6 +84,12 @@ a.imgLink:link {
     top: 0;
 }
 
+#stickyPlaceholder {
+    display: none;
+    height: 3.5em;
+    width: 100%;
+}
+
 /*Add some padding to replace the body's missing padding.*/
 .content {
     margin: 8px;
